RESOLVED FIXED264557
[pdf] 270501@main broke the build
https://bugs.webkit.org/show_bug.cgi?id=264557
Summary [pdf] 270501@main broke the build
Antoine Quint
Reported 2023-11-10 00:23:35 PST
Getting the following build error which was caused by 270501@main. Sadly, 270504@main did not suffice. In file included from /Users/antoine/Builds/Release-iphonesimulator/DerivedSources/WebKit/unified-sources/UnifiedSource62-mm.mm:6: /Users/antoine/Code/safari/OpenSource/Source/WebKit/WebProcess/Plugins/PDF/UnifiedPDF/UnifiedPDFPlugin.mm:204:68: error: receiver 'UIColor' is a forward class and corresponding @interface may not exist [-Werror,-Wreceiver-forward-class] context.fillRect(clipRect, WebCore::roundAndClampToSRGBALossy([WebCore::CocoaColor grayColor].CGColor)); In file included from /Users/antoine/Builds/Release-iphonesimulator/DerivedSources/WebKit/unified-sources/UnifiedSource62-mm.mm:6: In file included from /Users/antoine/Code/safari/OpenSource/Source/WebKit/WebProcess/Plugins/PDF/UnifiedPDF/UnifiedPDFPlugin.mm:36: /Users/antoine/Builds/Release-iphonesimulator/WebCore.framework/PrivateHeaders/ColorCocoa.h:35:12: note: forward declaration of class here OBJC_CLASS UIColor; In file included from /Users/antoine/Builds/Release-iphonesimulator/DerivedSources/WebKit/unified-sources/UnifiedSource62-mm.mm:6: /Users/antoine/Code/safari/OpenSource/Source/WebKit/WebProcess/Plugins/PDF/UnifiedPDF/UnifiedPDFPlugin.mm:204:88: error: class method '+grayColor' not found (return type defaults to 'id') [-Werror,-Wobjc-method-access] context.fillRect(clipRect, WebCore::roundAndClampToSRGBALossy([WebCore::CocoaColor grayColor].CGColor)); /Users/antoine/Code/safari/OpenSource/Source/WebKit/WebProcess/Plugins/PDF/UnifiedPDF/UnifiedPDFPlugin.mm:204:99: error: property 'CGColor' not found on object of type 'id' context.fillRect(clipRect, WebCore::roundAndClampToSRGBALossy([WebCore::CocoaColor grayColor].CGColor)); 3 errors generated.
Attachments
EWS
Comment 1 2023-11-10 00:30:39 PST
Committed 270513@main (eaadafa59570): <https://commits.webkit.org/270513@main> Reviewed commits have been landed. Closing PR #20292 and removing active labels.
Radar WebKit Bug Importer
Comment 2 2023-11-10 00:31:27 PST
Note You need to log in before you can comment on or make changes to this bug.