[pdf] 270501@main broke the build https://bugs.webkit.org/show_bug.cgi?id=264557

Unreviewed build fix.

* Source/WebKit/WebProcess/Plugins/PDF/UnifiedPDF/UnifiedPDFPlugin.mm:

Canonical link: https://commits.webkit.org/270513@main